syntax = "proto3";

package mgmt.v1alpha1;

import "buf/validate/validate.proto";

message RefreshAccessTokenRequest {
  string client_id = 1 [(buf.validate.field).string.min_len = 1];
  string refresh_token = 2 [(buf.validate.field).string.min_len = 1];
}

message RefreshAccessTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  string scope = 4;
  string id_token = 5;
  string token_type = 6;
}

message GetAccessTokenRequest {
  string client_id = 1 [(buf.validate.field).string.min_len = 1];
  string code = 2 [(buf.validate.field).string.min_len = 1];
  string redirect_uri = 3 [(buf.validate.field).string.min_len = 1];
}

message GetAccessTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  string scope = 4;
  string id_token = 5;
  string token_type = 6;
}

message GetAuthStatusRequest {}
message GetAuthStatusResponse {
  bool is_enabled = 1;
}

service AuthService {
  rpc GetAccessToken(GetAccessTokenRequest) returns (GetAccessTokenResponse) {}
  rpc RefreshAccessToken(RefreshAccessTokenRequest) returns (RefreshAccessTokenResponse) {}

  rpc GetAuthStatus(GetAuthStatusRequest) returns (GetAuthStatusResponse) {}
}
